# fit-journal

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json
sql/: foods.sql  journals.sql  schema.sql  test.sql  test_foods.sql  users.sql
src/: main.cc
src/controllers/: FoodCtrl.cc  FoodCtrl.h  JournalCtrl.cc  JournalCtrl.h  UserCtrl.cc  UserCtrl.h
src/database/: DbManager.h
src/dto/: food.h  food_journal_entry.h  journal.h  user.h
src/filters/: AuthFilter.cc  AuthFilter.h
src/models/: journal.h
src/plugins/: DBInit.cc  DBInit.h
src/views/: FoodItemForm.csp  FoodJournal.csp  FoodJournalEntry.csp  FoodList.csp  FoodPage.csp  FoodsPage.csp  JournalPage.csp  LoginPage.csp  LogoutPage.csp  food_item.csp  food_journal_entry.csp  foods.csp  foods_search.csp  journal_entries.csp  journals.csp
static/: index.html  style.css
test/: CMakeLists.txt
